antlr-generated/com/galaxyx/parser/GalaxyXPreprocessorParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g 2013-03-13 14:28:16

	package com.galaxyx.parser;
	
	import com.galaxyx.Preprocessor; 
	import com.galaxyx.utils.ErrorHandler;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class GalaxyXPreprocessorParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IF", "ELSE", "ELIF", "WHILE", "FOR", "END", "DO", "BREAK", "CONTINUE", "RETURN", "FALSE", "TRUE", "NULL", "STRUCT", "FUNC", "CONSTRUCTOR", "DESTRUCTOR", "TYPEDEF", "NAMESPACE", "CLASS", "INTERFACE", "IMPLEMENTS", "EXTENDS", "NEW", "DELETE", "THIS", "SUPER", "NAMEOF", "INITIALIZER", "INLINE", "STATIC", "CONST", "PRIVATE", "PUBLIC", "NATIVE", "DEFINE", "UNDEF", "INCLUDE", "PREFIX", "SEMI", "COMMA", "DOT", "COLON", "RETURNS", "PLUS", "SUB", "DIV", "TIMES", "MODULO", "AND", "OR", "XOR", "BIT_NOT", "NOT", "LOR", "LAND", "EQ", "NEQ", "LT", "LTEQ", "GT", "GTEQ", "SHIFTL", "SHIFTR", "ASSGN", "ASSGNP", "ASSGNS", "ASSGNT", "ASSGND", "ASSGNM", "ASSGNSHL", "ASSGNSHR", "ASSGNBITAND", "ASSGNBITOR", "ASSGNBITXOR", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "NAMESPACE_ACCESS", "LETTER", "IDENTIFIER", "EscapeSequence", "CHARACTER_LITERAL", "STRING_LITERAL", "DIGIT", "HEX_LITERAL", "INTEGER", "HexDigit", "FIXED_LITERAL", "OctalEscape", "WS", "LINE_COMMENT", "MULTI_COMMENT", "NEGATION"
    };
    public static final int EOF=-1;
    public static final int IF=4;
    public static final int ELSE=5;
    public static final int ELIF=6;
    public static final int WHILE=7;
    public static final int FOR=8;
    public static final int END=9;
    public static final int DO=10;
    public static final int BREAK=11;
    public static final int CONTINUE=12;
    public static final int RETURN=13;
    public static final int FALSE=14;
    public static final int TRUE=15;
    public static final int NULL=16;
    public static final int STRUCT=17;
    public static final int FUNC=18;
    public static final int CONSTRUCTOR=19;
    public static final int DESTRUCTOR=20;
    public static final int TYPEDEF=21;
    public static final int NAMESPACE=22;
    public static final int CLASS=23;
    public static final int INTERFACE=24;
    public static final int IMPLEMENTS=25;
    public static final int EXTENDS=26;
    public static final int NEW=27;
    public static final int DELETE=28;
    public static final int THIS=29;
    public static final int SUPER=30;
    public static final int NAMEOF=31;
    public static final int INITIALIZER=32;
    public static final int INLINE=33;
    public static final int STATIC=34;
    public static final int CONST=35;
    public static final int PRIVATE=36;
    public static final int PUBLIC=37;
    public static final int NATIVE=38;
    public static final int DEFINE=39;
    public static final int UNDEF=40;
    public static final int INCLUDE=41;
    public static final int PREFIX=42;
    public static final int SEMI=43;
    public static final int COMMA=44;
    public static final int DOT=45;
    public static final int COLON=46;
    public static final int RETURNS=47;
    public static final int PLUS=48;
    public static final int SUB=49;
    public static final int DIV=50;
    public static final int TIMES=51;
    public static final int MODULO=52;
    public static final int AND=53;
    public static final int OR=54;
    public static final int XOR=55;
    public static final int BIT_NOT=56;
    public static final int NOT=57;
    public static final int LOR=58;
    public static final int LAND=59;
    public static final int EQ=60;
    public static final int NEQ=61;
    public static final int LT=62;
    public static final int LTEQ=63;
    public static final int GT=64;
    public static final int GTEQ=65;
    public static final int SHIFTL=66;
    public static final int SHIFTR=67;
    public static final int ASSGN=68;
    public static final int ASSGNP=69;
    public static final int ASSGNS=70;
    public static final int ASSGNT=71;
    public static final int ASSGND=72;
    public static final int ASSGNM=73;
    public static final int ASSGNSHL=74;
    public static final int ASSGNSHR=75;
    public static final int ASSGNBITAND=76;
    public static final int ASSGNBITOR=77;
    public static final int ASSGNBITXOR=78;
    public static final int LPAREN=79;
    public static final int RPAREN=80;
    public static final int LBRACE=81;
    public static final int RBRACE=82;
    public static final int LBRACK=83;
    public static final int RBRACK=84;
    public static final int NAMESPACE_ACCESS=85;
    public static final int LETTER=86;
    public static final int IDENTIFIER=87;
    public static final int EscapeSequence=88;
    public static final int CHARACTER_LITERAL=89;
    public static final int STRING_LITERAL=90;
    public static final int DIGIT=91;
    public static final int HEX_LITERAL=92;
    public static final int INTEGER=93;
    public static final int HexDigit=94;
    public static final int FIXED_LITERAL=95;
    public static final int OctalEscape=96;
    public static final int WS=97;
    public static final int LINE_COMMENT=98;
    public static final int MULTI_COMMENT=99;
    public static final int NEGATION=100;

    // delegates
    // delegators


        public GalaxyXPreprocessorParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public GalaxyXPreprocessorParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[167+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return GalaxyXPreprocessorParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g"; }


    	private Preprocessor p;
    	
    	@Override
        public void displayRecognitionError(String[] tokenNames,
                                            RecognitionException e) {
            Token t = e.token;
            String msg = getErrorMessage(e, tokenNames);
    		p.reportError(msg,t);
        }


    public static class parse_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "parse"
    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:35:1: parse[Preprocessor p] : ( preprocessor | namespace_decl )* EOF ;
    public final GalaxyXPreprocessorParser.parse_return parse(Preprocessor p) throws RecognitionException {
        GalaxyXPreprocessorParser.parse_return retval = new GalaxyXPreprocessorParser.parse_return();
        retval.start = input.LT(1);
        int parse_StartIndex = input.index();
        Object root_0 = null;

        Token EOF3=null;
        GalaxyXPreprocessorParser.preprocessor_return preprocessor1 = null;

        GalaxyXPreprocessorParser.namespace_decl_return namespace_decl2 = null;


        Object EOF3_tree=null;


        	this.p = p;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:39:2: ( ( preprocessor | namespace_decl )* EOF )
            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:39:4: ( preprocessor | namespace_decl )* EOF
            {
            root_0 = (Object)adaptor.nil();

            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:39:4: ( preprocessor | namespace_decl )*
            loop1:
            do {
                int alt1=3;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==PREFIX) ) {
                    alt1=1;
                }
                else if ( (LA1_0==NAMESPACE) ) {
                    alt1=2;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:39:5: preprocessor
            	    {
            	    pushFollow(FOLLOW_preprocessor_in_parse96);
            	    preprocessor1=preprocessor();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, preprocessor1.getTree());

            	    }
            	    break;
            	case 2 :
            	    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:39:20: namespace_decl
            	    {
            	    pushFollow(FOLLOW_namespace_decl_in_parse100);
            	    namespace_decl2=namespace_decl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, namespace_decl2.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            EOF3=(Token)match(input,EOF,FOLLOW_EOF_in_parse104); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            EOF3_tree = (Object)adaptor.create(EOF3);
            adaptor.addChild(root_0, EOF3_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, parse_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "parse"

    public static class namespace_decl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "namespace_decl"
    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:42:1: namespace_decl : NAMESPACE IDENTIFIER COLON ( class_decl | function_decl | field_decl | initializer | preprocessor )* END NAMESPACE ;
    public final GalaxyXPreprocessorParser.namespace_decl_return namespace_decl() throws RecognitionException {
        GalaxyXPreprocessorParser.namespace_decl_return retval = new GalaxyXPreprocessorParser.namespace_decl_return();
        retval.start = input.LT(1);
        int namespace_decl_StartIndex = input.index();
        Object root_0 = null;

        Token NAMESPACE4=null;
        Token IDENTIFIER5=null;
        Token COLON6=null;
        Token END12=null;
        Token NAMESPACE13=null;
        GalaxyXPreprocessorParser.class_decl_return class_decl7 = null;

        GalaxyXPreprocessorParser.function_decl_return function_decl8 = null;

        GalaxyXPreprocessorParser.field_decl_return field_decl9 = null;

        GalaxyXPreprocessorParser.initializer_return initializer10 = null;

        GalaxyXPreprocessorParser.preprocessor_return preprocessor11 = null;


        Object NAMESPACE4_tree=null;
        Object IDENTIFIER5_tree=null;
        Object COLON6_tree=null;
        Object END12_tree=null;
        Object NAMESPACE13_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:43:2: ( NAMESPACE IDENTIFIER COLON ( class_decl | function_decl | field_decl | initializer | preprocessor )* END NAMESPACE )
            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:43:4: NAMESPACE IDENTIFIER COLON ( class_decl | function_decl | field_decl | initializer | preprocessor )* END NAMESPACE
            {
            root_0 = (Object)adaptor.nil();

            NAMESPACE4=(Token)match(input,NAMESPACE,FOLLOW_NAMESPACE_in_namespace_decl115); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            NAMESPACE4_tree = (Object)adaptor.create(NAMESPACE4);
            adaptor.addChild(root_0, NAMESPACE4_tree);
            }
            IDENTIFIER5=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_namespace_decl117); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            IDENTIFIER5_tree = (Object)adaptor.create(IDENTIFIER5);
            adaptor.addChild(root_0, IDENTIFIER5_tree);
            }
            COLON6=(Token)match(input,COLON,FOLLOW_COLON_in_namespace_decl119); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            COLON6_tree = (Object)adaptor.create(COLON6);
            adaptor.addChild(root_0, COLON6_tree);
            }
            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:44:4: ( class_decl | function_decl | field_decl | initializer | preprocessor )*
            loop2:
            do {
                int alt2=6;
                alt2 = dfa2.predict(input);
                switch (alt2) {
            	case 1 :
            	    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:44:5: class_decl
            	    {
            	    pushFollow(FOLLOW_class_decl_in_namespace_decl125);
            	    class_decl7=class_decl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, class_decl7.getTree());

            	    }
            	    break;
            	case 2 :
            	    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:44:18: function_decl
            	    {
            	    pushFollow(FOLLOW_function_decl_in_namespace_decl129);
            	    function_decl8=function_decl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, function_decl8.getTree());

            	    }
            	    break;
            	case 3 :
            	    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:44:34: field_decl
            	    {
            	    pushFollow(FOLLOW_field_decl_in_namespace_decl133);
            	    field_decl9=field_decl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, field_decl9.getTree());

            	    }
            	    break;
            	case 4 :
            	    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:44:47: initializer
            	    {
            	    pushFollow(FOLLOW_initializer_in_namespace_decl137);
            	    initializer10=initializer();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, initializer10.getTree());

            	    }
            	    break;
            	case 5 :
            	    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:44:61: preprocessor
            	    {
            	    pushFollow(FOLLOW_preprocessor_in_namespace_decl141);
            	    preprocessor11=preprocessor();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, preprocessor11.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            END12=(Token)match(input,END,FOLLOW_END_in_namespace_decl147); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            END12_tree = (Object)adaptor.create(END12);
            adaptor.addChild(root_0, END12_tree);
            }
            NAMESPACE13=(Token)match(input,NAMESPACE,FOLLOW_NAMESPACE_in_namespace_decl149); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            NAMESPACE13_tree = (Object)adaptor.create(NAMESPACE13);
            adaptor.addChild(root_0, NAMESPACE13_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, namespace_decl_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "namespace_decl"

    public static class class_decl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "class_decl"
    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:48:1: class_decl : ( modifier )? CLASS IDENTIFIER ( EXTENDS IDENTIFIER )? COLON ( field_decl | function_decl | constructor_decl | destructor_decl | preprocessor )* END CLASS ;
    public final GalaxyXPreprocessorParser.class_decl_return class_decl() throws RecognitionException {
        GalaxyXPreprocessorParser.class_decl_return retval = new GalaxyXPreprocessorParser.class_decl_return();
        retval.start = input.LT(1);
        int class_decl_StartIndex = input.index();
        Object root_0 = null;

        Token CLASS15=null;
        Token IDENTIFIER16=null;
        Token EXTENDS17=null;
        Token IDENTIFIER18=null;
        Token COLON19=null;
        Token END25=null;
        Token CLASS26=null;
        GalaxyXPreprocessorParser.modifier_return modifier14 = null;

        GalaxyXPreprocessorParser.field_decl_return field_decl20 = null;

        GalaxyXPreprocessorParser.function_decl_return function_decl21 = null;

        GalaxyXPreprocessorParser.constructor_decl_return constructor_decl22 = null;

        GalaxyXPreprocessorParser.destructor_decl_return destructor_decl23 = null;

        GalaxyXPreprocessorParser.preprocessor_return preprocessor24 = null;


        Object CLASS15_tree=null;
        Object IDENTIFIER16_tree=null;
        Object EXTENDS17_tree=null;
        Object IDENTIFIER18_tree=null;
        Object COLON19_tree=null;
        Object END25_tree=null;
        Object CLASS26_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:49:2: ( ( modifier )? CLASS IDENTIFIER ( EXTENDS IDENTIFIER )? COLON ( field_decl | function_decl | constructor_decl | destructor_decl | preprocessor )* END CLASS )
            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:49:4: ( modifier )? CLASS IDENTIFIER ( EXTENDS IDENTIFIER )? COLON ( field_decl | function_decl | constructor_decl | destructor_decl | preprocessor )* END CLASS
            {
            root_0 = (Object)adaptor.nil();

            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:49:4: ( modifier )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( ((LA3_0>=PRIVATE && LA3_0<=PUBLIC)) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:0:0: modifier
                    {
                    pushFollow(FOLLOW_modifier_in_class_decl161);
                    modifier14=modifier();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, modifier14.getTree());

                    }
                    break;

            }

            CLASS15=(Token)match(input,CLASS,FOLLOW_CLASS_in_class_decl164); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            CLASS15_tree = (Object)adaptor.create(CLASS15);
            adaptor.addChild(root_0, CLASS15_tree);
            }
            IDENTIFIER16=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_class_decl166); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            IDENTIFIER16_tree = (Object)adaptor.create(IDENTIFIER16);
            adaptor.addChild(root_0, IDENTIFIER16_tree);
            }
            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:49:31: ( EXTENDS IDENTIFIER )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==EXTENDS) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:49:32: EXTENDS IDENTIFIER
                    {
                    EXTENDS17=(Token)match(input,EXTENDS,FOLLOW_EXTENDS_in_class_decl169); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    EXTENDS17_tree = (Object)adaptor.create(EXTENDS17);
                    adaptor.addChild(root_0, EXTENDS17_tree);
                    }
                    IDENTIFIER18=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_class_decl171); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    IDENTIFIER18_tree = (Object)adaptor.create(IDENTIFIER18);
                    adaptor.addChild(root_0, IDENTIFIER18_tree);
                    }

                    }
                    break;

            }

            COLON19=(Token)match(input,COLON,FOLLOW_COLON_in_class_decl175); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            COLON19_tree = (Object)adaptor.create(COLON19);
            adaptor.addChild(root_0, COLON19_tree);
            }
            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:50:4: ( field_decl | function_decl | constructor_decl | destructor_decl | preprocessor )*
            loop5:
            do {
                int alt5=6;
                alt5 = dfa5.predict(input);
                switch (alt5) {
            	case 1 :
            	    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:50:5: field_decl
            	    {
            	    pushFollow(FOLLOW_field_decl_in_class_decl181);
            	    field_decl20=field_decl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, field_decl20.getTree());

            	    }
            	    break;
            	case 2 :
            	    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:50:18: function_decl
            	    {
            	    pushFollow(FOLLOW_function_decl_in_class_decl185);
            	    function_decl21=function_decl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, function_decl21.getTree());

            	    }
            	    break;
            	case 3 :
            	    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:50:34: constructor_decl
            	    {
            	    pushFollow(FOLLOW_constructor_decl_in_class_decl189);
            	    constructor_decl22=constructor_decl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, constructor_decl22.getTree());

            	    }
            	    break;
            	case 4 :
            	    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:50:53: destructor_decl
            	    {
            	    pushFollow(FOLLOW_destructor_decl_in_class_decl193);
            	    destructor_decl23=destructor_decl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, destructor_decl23.getTree());

            	    }
            	    break;
            	case 5 :
            	    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\build\\classes\\com\\galaxyx\\parser\\GalaxyXPreprocessorParser.g:50:71: preprocessor
            	    {
            	    pushFollow(FOLLOW_preprocessor_in_class_decl197);
            	    preprocessor24=preprocessor();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, preprocessor24.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            END25=(Token)match(input,END,FOLLOW_END_in_class_decl203); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            END25_tree = (Object)adaptor.create(END25);
            adaptor.addChild(root_0, END25_tree);
            }
            CLASS26=(Token)match(input,CLASS,FOLLOW_CLASS_in_class_decl205); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            CLASS26_tree = (Object)adaptor.create(CLASS26);
            adaptor.addChild(root_0, CLASS26_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
